small fix so wordle clone will load

--- a/days/day1/day1.html
+++ b/days/day1/day1.html
@@ -14,7 +14,7 @@
         <li>Javascript</li>
         <li>React</li>
         <li>Raspberry Pi</li>
-        <li>Node</li>
+        <li>NodeJS</li>
     </ul>
     <p>I had a quick refresher on how to ssh into a raspberry pi. The command is ssh pi@192.168.1.228 and the default password is raspberrypi</p>
     <p>I made a quick wordle clone in react. Try it out <a href="./wordle/index.html">Here</a> The code can be found on github <a href="https://github.com/JustinCockrell1/Wordle">here</a></p>
