--- a/days/day1/day1.html
+++ b/days/day1/day1.html
@@ -7,7 +7,7 @@
     <title>Day 1</title>
 </head>
 <body>
-    <h1>Day 1</h1>
+    <h1>Day 1 3/27/2022</h1>
     <h2>Languages</h2>
     <ul>
         <li>Python</li>
