remove padding on mobile

--- a/days/day1.html
+++ b/days/day1.html
@@ -1,5 +1,5 @@
 <div class="day-description">
-    <div class="day-date"><span>Day 1 - </span> <span>&nbsp;3/27/2022</span></div>
+    <div class="day-date"><span>Day 1 3/27/2022</div>
     <ul class="day-languages">
         <li>Python</li>
         <li>Javascript</li>
