change day-languages css

--- a/days/day1.html
+++ b/days/day1.html
@@ -1,3 +1,4 @@
+<div class="day">
 <div class="day-description">
     <div class="day-date"><span>Day 1 3/27/2022</div>
     <ul class="day-languages">
@@ -62,3 +63,4 @@
 </section>
  
 
+</div>
