--- a/days/day2.html
+++ b/days/day2.html
@@ -1,22 +1,44 @@
 <div class="day-description">
     <div class="day-date"><span>Day 1 3/28/2022</div>
     <ul class="day-languages">
-        <li>Python</li>
         <li>Javascript</li>
-        <li>React</li>
-        <li>Raspberry Pi</li>
+        <li>React Native</li>
         <li>NodeJS</li>
-        <li>Database</li>
+        <li>HTML</li>
+        <li>CSS</li>
         <li>C++</li>
     </ul>
 </div>
+
+<section id="100days" class="html css javascript">
+    <div class="section-title">
+        <h1>100 Days Site</h1>
+    </div>
+    <div class="section-body">
+        <img src="/images/day2/100daysofcodehome.png" alt="" srcset="">
+        Created and styled most of the 100 days of code website.
+        Used javascript to dynamically load days onto the main page.
+    </div>
+</section>
+
+<section id="attendance" class="react-native nodejs javascript">
+    <div class="section-title">
+        <h1>Attendance App</h1>
+    </div>
+    <div class="section-body">
+        Worked on the attendance app I'm making in react native.
+        <ul>
+            <li>Added a delete route to delete classes</li>
+        </ul>
+    </div>
+</section>
 
 <section id="leetcode" class="c++">
     <div class="section-title">
         <h1>Leetcode Problems</h1>
     </div>
     <div class="section-description">
-        <ul>C++</ul>
+      
     </div>
     <div class="section-body">
         <div class="leetcode-problem">
