add description for summary ranges leetcode day2

--- a/days/day1.html
+++ b/days/day1.html
@@ -16,7 +16,7 @@
         <h1>Created Python Script to analyze data</h1>
     </div>
     <div class="section-body">
-        <img src="/images/day1/jsontocsv.png" alt="" srcset="">
+        <img src="./images/day1/jsontocsv.png" alt="" srcset="">
     <p>Created a python script on my raspberry pi that reads from a json file and converts it into a csv.</p>
     <p>I had a quick refresher on how to ssh into a raspberry pi. The command is ssh pi@192.168.1.228 and the default password is raspberrypi</p>
     </div>
@@ -26,7 +26,7 @@
         <h1>Created a Wordle Clone</h1>
     </div>
     <div class="section-body">
-        <img src="/images/day1/wordleclone.png" alt="" srcset="">
+        <img src="./images/day1/wordleclone.png" alt="" srcset="">
     <p>I made a quick wordle clone in react. Try it out <a href="./projects/wordle/index.html">Here</a> The code can be found on github <a href="https://github.com/JustinCockrell1/Wordle">here</a></p>
 </div>
 </section>
