--- a/days/day2.html
+++ b/days/day2.html
@@ -15,7 +15,7 @@
         <h1>100 Days Site</h1>
     </div>
     <div class="section-body">
-        <img src="/images/day2/100daysofcodehome.png" alt="" srcset="">
+        <img src="./images/day2/100daysofcodehome.png" alt="" srcset="">
         Created and styled most of the 100 days of code website.
         Used javascript to dynamically load days onto the main page.
     </div>
@@ -29,6 +29,7 @@
         Worked on the attendance app I'm making in react native.
         <ul>
             <li>Added a delete route to delete classes</li>
+            <li>Got stuck and started watching academind react tutorial</li>
         </ul>
     </div>
 </section>
@@ -54,6 +55,19 @@
     <pre class="leetcode-code" contenteditable="false" spellcheck="false" data-leetcode="generateParenthesis"></pre>
         </div>
         <div class="leetcode-problem">
+            <div class="leetcode-title">
+                <h1>Summary Ranges</h1>
+            </div>
+            <div class="leetcode-difficulty">Easy</div>
+            <div class="leetcode-description">
+                <h2></h2> <span class="leetcode-status">Solved</span>
+                <p>You are given a sorted unique integer array nums.
+
+                    A range [a,b] is the set of all integers from a to b (inclusive).
+                    
+                    Return the smallest sorted list of ranges that cover all the numbers in the array exactly. That is, each element of nums is covered by exactly one of the ranges, and there is no integer x such that x is in one of the ranges but not in nums.</p> 
+            </div>
+
     <pre class="leetcode-code" contenteditable="false" spellcheck="false" data-leetcode="summaryRanges"></pre>
         </div>
     </div>
