add powerOfTwo leetcode and discrete maths

--- a/days/day3.html
+++ b/days/day3.html
@@ -42,3 +42,75 @@
        <img src="./images/day3/guessingApp.png" alt="">
     </div>
 </section>
+
+<section id="leetcode" class="c++">
+    <div class="section-title">
+        <h1>Leetcode</h1>
+    </div>
+    <div class="section-body">
+        <div class="leetcode-problem">
+            <div class="leetcode-title">
+                <h1>Power of Two</h1>
+            </div>
+            <div class="leetcode-difficulty">Easy</div>
+            <div class="leetcode-description">
+                <h2>Given an integer n, return true if it is a power of two. Otherwise, return false.</h2> <span class="leetcode-status">Solved</span>
+                <p>This is a very lazy solution but it's speed is in the top 100% of C++ submissions</p> 
+            </div>
+            
+    <pre class="leetcode-code" contenteditable="false" spellcheck="false" data-leetcode="powerOfTwo"></pre>
+    <div class="leetcode-description">
+        <p>This is a much nicer solution using the bitwise & operator.</p>
+    </div>
+    <pre class="leetcode-code" contenteditable="false" spellcheck="false" data-leetcode="powerOfTwoBetter"></pre>
+    <hr>
+    <h2>Spent some time looking at the generate parenthesis problem but still couldn't solve it.</h2>
+        </div>
+    </div>
+</section>
+
+<section id="math" class="math">
+    <div class="section-title">
+        <h1>Read 1.1 of discrete mathematics by Kenneth Rosman</h1>
+    </div>
+    <div class="section-body">
+        <h2>Notes</h2>
+        <ul>
+            <li>^ is the and operator p ^ q is the conjunction of p and q</li>
+            <li>V is the or operator p V q is the disjunction of p and q</li>
+            <li>p ⊕ q is the exclusive or of p and q</li>
+            <li>q->p is an implication which means if q then p</li>
+            <li>Converse: p -> q is the converse of q -> p</li>
+            <li>Contrapositive: ¬p -> ¬q is the contrapositive of q -> p</li>
+            <li>biconditional p &lt;-&gt; q is the proposition that is true only when p and q have the same truth values. q if and only if p</li>
+        </ul>
+        <table>
+            <thead>Truth Table</thead>
+            <tr>
+                <th>p</th>
+                <th>q</th>
+                <th>pVq</th>
+            </tr>
+            <tr>
+                <td>true</td>
+                <td>false</td>
+                <td>true</td>
+            </tr>
+            <tr>
+                <td>false</td>
+                <td>true</td>
+                <td>true</td>
+            </tr>
+            <tr>
+                <td>false</td>
+                <td>false</td>
+                <td>false</td>
+            </tr>
+            <tr>
+                <td>true</td>
+                <td>true</td>
+                <td>true</td>
+            </tr>
+        </table>
+    </div>
+</section>
