--- a/days/day3.html
+++ b/days/day3.html
@@ -3,9 +3,7 @@
     <ul class="day-languages">
         <li>Javascript</li>
         <li>React Native</li>
-        <li>NodeJS</li>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li>Math</li>
         <li>C++</li>
     </ul>
 </div>
