--- a/days/day4.html
+++ b/days/day4.html
@@ -22,7 +22,7 @@
     </div>
 </section>
 
-<section id="react-course">
+<section id="attendance-app">
     <div class="section-title">
         <h1>Attendance App</h1>
     </div>
