--- a/days/Day6.html
+++ b/days/Day6.html
@@ -22,7 +22,7 @@
 
 <section class="dragonvale">
     <div class="section-title">
-        Dragonvale Game
+        <h1>Dragonvale Game</h1>
     </div>
     <div class="section-body">
         <h2>Got a game I was making with my c++ game engine from my linux computer onto my windows computer.</h2>
