--- a/days/day8.html
+++ b/days/day8.html
@@ -1,9 +1,10 @@
 <div class="day-description">
-    <div class="day-date"><span>Day 7 4/2/2022</div>
+    <div class="day-date"><span>Day 8 4/3/2022</div>
     <ul class="day-languages">
         <li>Javascript</li>
         <li>HTML</li>
         <li>CSS</li>
+
   
     </ul>
     </div>
@@ -15,10 +16,9 @@
             <h1>Journal App</h1>
         </div>
         <div class="section-body">
-            <h2>Started making a new productivity/journal app.</h2>
-            <p>Built out the login and register pages and got some work done on the dashboard.</p>
+            <h2>Added the /task route to the app</h2>
         
-            <img src="./images/day7/journal.png" alt="" srcset="">
+            <img src="./images/day8/journal.png" alt="" srcset="">
     
         </div>
     </section>
