--- a/days/day10.html
+++ b/days/day10.html
@@ -43,4 +43,16 @@
             <img src="./images/day10/synergyChessClub.png" alt="" srcset="" style="width:80%">
         </div>
     </section>
+
+    <section id="attendance-app">
+        <div class="section-title">
+            <h1>Attendance App</h1>
+        </div>
+        <div class="section-body">
+            <h2>Need to add refreshing to the FlatList's</h2>
+            <a href="https://reactnative.dev/docs/flatlist#onrefresh">https://reactnative.dev/docs/flatlist#onrefresh</a>
+            <h2>Need to add email verification. Probably with nodemailer</h2>
+            <a href="https://nodemailer.com/about/">https://nodemailer.com/about/</a>
+        </div>
+    </section>
 </div>
