day 10 and navigation

--- a/days/day10.html
+++ b/days/day10.html
@@ -55,4 +55,14 @@
             <a href="https://nodemailer.com/about/">https://nodemailer.com/about/</a>
         </div>
     </section>
+
+    <section id="100days">
+        <div class="section-title">
+            <h1></h1>
+        </div>
+        <div class="section-body">
+            <h2>Started adding a navigation bar to the page. It needs to be able to dynamically read from the pages to insert days and each section from the day.</h2>
+            <img src="./images/day10/navigation.png" alt="" srcset="">
+        </div>
+    </section>
 </div>
