--- a/days/day16.html
+++ b/days/day16.html
@@ -17,7 +17,9 @@
         <div class="section-body">
             <h2>Made a new schedule for me to follow for the next few months</h2>
             <h2>Started up the productivity app on my raspberry pi again to help keep track of the work I do</h2>
-            <h2>In order to make a task run even after closing the ssh on a raspberry pi you can just nohup command.</h2>
+            <h2>In order to make a task run even after closing the ssh on a raspberry pi you press ctrl+z, then type
+                bg and then 
+                disown -h.</h2>
             </div>
     </section>
 
