add day 17 - we're back

--- a/days/day16.html
+++ b/days/day16.html
@@ -20,6 +20,20 @@
             <h2>In order to make a task run even after closing the ssh on a raspberry pi you press ctrl+z, then type
                 bg and then 
                 disown -h.</h2>
+
+                <h2>I started an excel spreadsheet and kept track of how long I did everything today with a timer. It turned out pretty well. I'll need to automate it somehow</h2>
+                <img src="./images/day16/tracker.png" alt="" srcset="">
             </div>
+    </section>
+
+    <section id="game engine">
+        <div class="section-title">
+            <h1>OpenGL Graphics</h1>
+        </div>
+        <div class="section-body">
+            <h2>Abstracted the code to draw a triangle into classes.</h2>
+            <h2>Worked with shaders and indices to draw a slightly more complicated shape with different colors</h2>
+            <img src="./images/day16/opengl.png" alt="" srcset="">
+        </div>
     </section>
 
