--- a/days/day17.html
+++ b/days/day17.html
@@ -18,7 +18,7 @@
         <div class="section-body">
             <h2></h2>
 
-                <h2>I started an excel spreadsheet and kept track of how long I did everything today with a timer. It turned out pretty well. I'll need to automate it somehow</h2>
+                <h2>I made a simple site to help people memorize PI. You can check it out <a href="justincockrell1.github.io/memorizer">here</a></h2>
                 <img src="./images/day17/memorizer.png" alt="" srcset="">
             </div>
     </section>
